@@ -95,7 +95,7 @@ jobs:
           - nodemssqldata:/var/opt/mssql
 
       elasticsearch:
-        image: docker.elastic.co/elasticsearch/elasticsearch:7.15.1
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.2.1
         env:
           ES_JAVA_OPTS: '-Xms512m -Xmx512m'
           network.host: ''
